# BasicToolsLib

./: .gitignore  CMakeLists.txt  README.md
include/: abstractprogresscounter.h  base64.h  bytestring.h  commandlinemanager.h  configurationobject.h  configurationparser.h  emailaccountdata.h  emaildata.h  filetools.h  mimetools.h  networkwaker.h  ostools.h  parserstatemachine.h  parserstates.h  pathtools.h  point.hpp  point2d.h  stringtools.h  tools.h
src/: abstractprogresscounter.cpp  base64.cpp  commandlinemanager.cpp  configurationobject.cpp  configurationparser.cpp  emailaccountdata.cpp  emaildata.cpp  filetools.cpp  mimetools.cpp  networkwaker.cpp  ostools.cpp  pathtools.cpp  point.cpp  point2d.cpp  stringtools.cpp  tools.cpp
tests/: CMakeLists.txt
tests/src/: configurationparseroutput.cpp  configurationparseroutput.h  configurationparsertests.cpp  filetoolstests.cpp  tests.cpp
